--- a/src/components/Month.module.css
+++ b/src/components/Month.module.css
@@ -6,18 +6,13 @@
   align-items: center;
 }
 
-@media (min-width: 768px) {
-  .monthLayout {
-    width: 90%;
-    margin: auto;
-  }
-}
-
 .dayNames {
-  margin: 0;
-  text-align: center;
   text-decoration: underline;
-  text-decoration-thickness: 2px;
-  color: deeppink;
-  background-color: rgb(221, 255, 205);
+  height: 100%;
+  color: #f8f8f8;
+  font-size: 1.2rem;
+  background-color: rgb(74, 173, 255);
+  display: flex;
+  place-items: center;
+  place-content: center;
 }
