--- a/src/components/CreateNewTask.module.css
+++ b/src/components/CreateNewTask.module.css
@@ -26,21 +26,20 @@
 }
 .modalButton {
   display: flex;
+  margin-right: 5%;
   gap: 1rem;
-  justify-content: center;
+  justify-content: flex-end;
 }
 .modalButton button {
   border: none;
   box-shadow: 0 0 3px 1px #ccc;
   background-color: rgb(72, 158, 255);
   border-radius: 0.2rem;
-  width: 5rem;
-  height: 3rem;
+  width: 4rem;
+  height: 1.5rem;
   cursor: pointer;
-  place-items: center;
-  place-content: center;
   font-size: 0.9rem;
-  font-weight: bold;
+  font-weight: 400;
   margin: 0;
   color: #fff;
   transition: all 0.15s ease-in;
@@ -58,12 +57,12 @@
   flex-direction: column;
   place-items: center;
 }
-.labels {
+.details {
   display: flex;
   justify-content: flex-start;
   place-items: center;
   width: 85%;
-  margin: 0.3rem;
+  margin: 0.5rem 0;
   gap: 5%;
 }
 .color {
@@ -74,9 +73,17 @@
   display: flex;
   place-items: center;
   place-content: center;
+  cursor: pointer;
 }
 .active {
   color: white;
+}
+.active::before {
+  content: "\2713";
+}
+.color:is(.active) {
+  scale: 1.1;
+  box-shadow: inset 0px 0px 3px 0px rgb(42, 45, 49);
 }
 .formInput {
   display: flex;
@@ -84,24 +91,24 @@
   width: 85%;
 }
 label {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   color: rgb(97, 97, 97, 0.8);
   font-weight: bold;
 }
 input {
   margin: 0.5em;
   border: none;
-  box-shadow: 0 0 0 1px #ccc;
+  border-bottom: 1px solid #ccc;
   padding: 0.5em;
-  border-radius: 0.5rem;
   outline: none;
   caret-color: #ccc;
   color: rgb(97, 97, 97);
   font-weight: 600;
+  transition: border 0.2s ease-in-out;
 }
 input:active,
 input:focus {
-  box-shadow: 0 0 3px 1px rgba(118, 150, 255, 0.85);
+  border-bottom: 1px solid rgba(118, 150, 255, 0.85);
 }
 input::placeholder {
   color: #ccc;
