--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -13,7 +13,7 @@
   text-align: center;
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
-  padding: 0.25rem;
+  padding: 0.5rem;
   background: rgba(118, 150, 255, 0.85);
   color: white;
 }
@@ -26,11 +26,13 @@
   padding: 1rem 0.5rem;
 }
 .modalContent p {
-  color: black !important;
+  color: rgb(97, 97, 97);
   font-weight: 700;
 }
 
 .modalFooter {
+  border: none;
+  border-top: 1px solid #ccc;
   text-align: center;
   padding: 1rem 0rem;
 }
