--- a/src/components/Day.module.css
+++ b/src/components/Day.module.css
@@ -2,6 +2,17 @@
   /* border: 0.5px solid rgb(172, 196, 66); */
   box-shadow: 0px 0px 1.5px 0px rgba(172, 196, 66, 1);
   cursor: pointer;
+  height: 100%;
+  box-sizing: border-box;
+  overflow-y: scroll;
+  overflow-x: hidden !important;
+}
+.day::-webkit-scrollbar {
+  width: 0px;
+}
+
+.day::-webkit-scrollbar-track {
+  background-color: transparent;
 }
 
 .day:hover:not(.active) {
@@ -16,23 +27,17 @@
   display: flex;
   flex-direction: column;
   place-items: center;
-  padding: 1.25rem 0;
-}
-.dayName {
-  font-size: 0.85;
-  font-weight: 600;
-  color: rgb(119, 88, 255);
 }
 
 .dayNumber {
   color: rgb(179, 124, 24);
   font-size: 0.75rem;
   font-weight: 600;
+  margin: 0.25em auto;
 }
 .active {
-  background-color: rgb(113, 113, 235);
-
-  border-radius: 8px;
+  background-color: rgba(166, 209, 111, 0.7);
+  box-shadow: 0px 0px 2px 2px #ccc;
 }
 .active p {
   color: #f8f8f8;
@@ -50,4 +55,39 @@
 }
 .selected p {
   color: #f8f8f8 !important;
+}
+.task {
+  width: 100%;
+  max-width: 20rem;
+  border-radius: 1rem;
+  color: white;
+  font-size: 0.75rem;
+  font-weight: 200;
+  opacity: 0.7;
+  text-align: left;
+  margin-bottom: 3px;
+}
+.task:hover {
+  opacity: 1;
+}
+.task p {
+  width: 100%;
+  margin-left: 0.5rem;
+  max-width: 3rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+@media (min-width: 500px) {
+  .task p {
+    width: 100%;
+    max-width: 5rem;
+  }
+}
+@media (min-width: 768px) {
+  .task p {
+    width: 100%;
+    max-width: 10rem;
+    font-size: 0.85rem;
+  }
 }
