--- a/src/components/Month.module.css
+++ b/src/components/Month.module.css
@@ -1,16 +1,15 @@
 .monthLayout {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(7, 1fr);
+  grid-template-columns: repeat(7, minmax(2rem, 10rem));
+  grid-template-rows: repeat(7, minmax(2rem, 5rem));
   gap: 3px;
-  align-items: center;
+  place-content: center;
 }
 
 .dayNames {
   text-decoration: underline;
   height: 100%;
   color: #f8f8f8;
-  font-size: 1.2rem;
   background-color: rgb(74, 173, 255);
   display: flex;
   place-items: center;
