--- a/src/components/Day.module.css
+++ b/src/components/Day.module.css
@@ -35,11 +35,10 @@
   font-weight: 600;
   margin: 0.25em auto;
 }
-.active {
-  background-color: rgba(166, 209, 111, 0.7);
-  box-shadow: 0px 0px 2px 2px #ccc;
-}
 .active p {
+  background-color: rgb(89, 156, 0);
+  padding: 3px;
+  border-radius: 1rem;
   color: #f8f8f8;
 }
 .notActiveMonth {
